2011-03-16  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_run): Prepend a shell command to the
	pasted script to force the shell to close the file descriptor being
	used to paste the script. The shell will already have a new copy when
	it opened the path.

2011-03-15  James Hunt  <james.hunt@ubuntu.com>

	* init/conf.c (conf_source_reload, conf_source_reload_dir): Fix typos
	in doc-strings
	* init/job_process.c (job_process_run): Fix typo in doc-string
	* init/parse_job.c (stanza_env): Fix typo in doc-string

2011-03-15  Patty Langasek  <harmoney@dodds.net>

	* init/man/init.5: Grammar fixes

2011-03-15  Jacek Konieczny  <jajcus@jajcus.net>

	* contrib/vim/syntax/upstart.vim: Further improve syntax hilighting

2011-03-01  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 1.1
	* NEWS: Begin new release

	* NEWS: Release 1.0

2011-02-17  Scott James Remnant  <scott@netsplit.com>

	* configure.ac, NEWS: Bump version to 1.0
	* TODO: Update.

	* init/tests/test_conf.c (test_source_reload_job_dir): Add tests for
	a crasher bug when a file is created called ".conf"
	* init/conf.c (conf_dir_filter): Apply fix for the crasher; check that
	the character before the ".conf" extension is not "/"
	* NEWS: Update.

2011-01-06  Petr Lautrbach  <plautrba@redhat.com>

	* init/job_process.c (job_process_termianted): Don't rewind the
	utmp file between updates.
	* init/tests/test_job_process.c (test_utmp): Add test case for
	newer mingetty behaviour.

2010-12-21  James Hunt  <james.hunt@ubuntu.com>

	* contrib/bash_completion/upstart: Add bash completion script.
	* contrib/Makefile.am (EXTRA_DIST): Include in tarball.
	* NEWS: Update.

2010-12-20  Scott James Remnant  <scott@netsplit.com>

	* NEWS: update.

2010-12-20  Petr Lautrbach  <plautrba@redhat.com>

	* init/job_process.c (job_process_terminated): On termination of
	a job, update the utmp file replacing any existing entry for that