@@ -1,5 +1,11 @@
 2011-03-16  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job_process.c (job_process_handler): Check the job's normal exit
+	list, decrease log priority of messages from warning to information if
+	the exit status or signal is in the list.
+	* init/tests/test_job_process.c (test_handler): Change the normal exit
+	test cases to not expect the warning
+
 	* init/job_process.c (job_process_run): Prepend a shell command to the
 	pasted script to force the shell to close the file descriptor being
 	used to paste the script. The shell will already have a new copy when
